joined mission upd

--- a/translations/uk/info/task_description.html
+++ b/translations/uk/info/task_description.html
@@ -3,20 +3,20 @@
     <img  title="example" src="{{MEDIA}}knapsack.png" alt="example" style="max-height: 200px"/>
 </p>
 <p>
-    Це третя місія у серії про знамениту та класичну задачу про <a target="_blank" href="https://uk.wikipedia.org/wiki/Задача_пакування_рюкзака">Пакування Рюкзака</a>. 
+    Це місія присвячена знаменитій та класичній задачі про <a target="_blank" href="https://uk.wikipedia.org/wiki/Задача_пакування_рюкзака">Пакування Рюкзака</a>. 
 </p>
 <p>
-    Тобі дано {% if is_js %}масив{% else %}список{% endif %} видів речей <b>items</b>, які хотілося б помістити в рюкзак. Предмет кожного виду - це кортеж з його цінності, ваги та максимальної кількості. Тобі потрібно знайти такий набір предметів, щоб:
+    Тобі дано {% if is_js %}масив{% else %}список{% endif %} видів речей <b>items</b>, які хотілося б помістити в рюкзак. Предмет кожного виду - це кортеж з його цінності, ваги та максимальної кількості (опційно). Тобі потрібно знайти такий набір предметів, щоб:
     <ul>
         <li>загальна цінність предметів у наборі була якомога більша;</li>
         <li>загальна вага предметів не перевищувала максимальну - <b>weight</b>, яка є ємністю рюкзака;</li>
-        <li>кожного предмету можна взяти щонайбільше дану кількість одиниць.</li>
+        <li>кожного предмету можна взяти щонайбільше дану кількість одиниць. Якщо ця кількість не задана - обмеження відсутні.</li>
     </ul>
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Вхідні дані:</strong> Два аргументи. Максимальна вага як ціле число, предмети як {% if is_js %}масив{% else %}список{% endif %} кортежів із трьох цілих чисел.
+    <strong>Вхідні дані:</strong> Два аргументи. Максимальна вага як ціле число, предмети як {% if is_js %}масив{% else %}список{% endif %} кортежів із двох або трьох цілих чисел.
 </p>
 
 <p>
