--- a/info/task_description.html
+++ b/info/task_description.html
@@ -3,20 +3,20 @@
     <img  title="example" src="{{MEDIA}}knapsack.png" alt="example" style="max-height: 200px"/>
 </p>
 <p>
-    This is the third mission in a series about famous and classical <a target="_blank" href="https://en.wikipedia.org/wiki/Knapsack_problem">Knapsack Problem</a>. 
+    This mission is dedicated to a famous and classical <a target="_blank" href="https://en.wikipedia.org/wiki/Knapsack_problem">Knapsack Problem</a>. 
 </p>
 <p>
-    You are given a{% if is_js %}n array{% else %} list{% endif %} of kinds of items <b>items</b>, that you want to put into knapsack. Item of each kind is a tuple of its value, weight and maximum amount. You need to find a subset of items, such that:
+    You are given a{% if is_js %}n array{% else %} list{% endif %} of kinds of items <b>items</b>, that you want to put into knapsack. Item of each kind is a tuple of its value, weight and maximum amount (optional). You need to find a subset of items, such that:
     <ul>
         <li>the total value of the items in subset is as large as possible;</li>
         <li>the total weight of items in subset is at most <b>weight</b>, that is capacity of the knapsack;</li>
-        <li>for each kind of items you can select at most amount items.</li>
+        <li>for each kind of items you can select at most given amount items. If its not given - there is no restriction for amount.</li>
     </ul>
 </p>
 
 <!-- Explain input and output values -->
 <p>
-    <strong>Input:</strong> Two arguments. Maximum weight as {% if is_js %}number{% else %}integer{% endif %}, items as {% if is_js %}array{% else %}list{% endif %} of tuples of three {% if is_js %}numbers{% else %}integers{% endif %}.
+    <strong>Input:</strong> Two arguments. Maximum weight as {% if is_js %}number{% else %}integer{% endif %}, items as {% if is_js %}array{% else %}list{% endif %} of tuples of two or three {% if is_js %}numbers{% else %}integers{% endif %}.
 </p>
 
 <p>
